# ARCS6

./: .gitignore  ARCS6.code-workspace  LICENSE  README.md  README_cmake.md
lib/: ARCS_LIB.cmake  ActivationFunctions.hh  AmpIncSquareWave.cc  AmpIncSquareWave.hh  ArcsControl.cc  ArcsControl.hh  ArcsMatrix.cc  ArcsMatrix.hh  ArcsNeuron.cc  ArcsNeuron.hh  ArcsVarMatrix.cc  ArcsVarMatrix.hh  CMakeLists.txt  ClassBase.cc  ClassBase.hh  ClassTemplate.cc  ClassTemplate.hh  Controller-JXC.cc  Controller-JXC.hh  CuiPlot.hh  Discret.hh  DisturbanceObsrv.hh  EthLinkChecker.cc  EthLinkChecker.hh  FRAgenerator.cc  FRAgenerator.hh  FrameGraphics.cc  FrameGraphics.hh  FunctionBase.cc  FunctionBase.hh  Limiter.hh  LoadVelocityObsrv.cc  LoadVelocityObsrv.hh  Makefile.depend  Matrix.hh  MotorSimulator.cc  MotorSimulator.hh  MovingDifferentiator.cc  MovingDifferentiator.hh  Observer.hh  (+61 more)
robot/SA2RasPi/BaseCtrl/: ControlFunctions.cc
robot/ServoEducator/BaseCtrl/: ConstParams.hh  ControlFunctions.cc  Makefile  Makefile.depend
robot/ServoEducator/equip/: EquipParams.hh  InterfaceFunctions.hh
robot/ZFA01/AntiBouncingCtrl/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc  InterfaceFunctions.hh
robot/ZFA01/CurrentCtrl/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc  Makefile  Makefile.depend
robot/ZFA01/FRA1S/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc
robot/ZFA01/FRA2L/: ConstParams.hh  ControlFunctions.cc
robot/ZFA01/FRA3U/: ControlFunctions.cc
robot/ZFA01/ForceSensTest/: ARCS  ConstParams.cc  ConstParams.hh  ControlFunctions.cc  InterfaceFunctions.hh
robot/ZFA01/FrictionComp1S/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc
robot/ZFA01/FrictionIdent1S/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/FrictionIdent2L/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc
robot/ZFA01/FrictionIdent3U/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/GravityCompTest/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc
robot/ZFA01/GravityIdent/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc
robot/ZFA01/HybridCtrl/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc  InterfaceFunctions.hh
robot/ZFA01/IPVTorsionTrqCtrl/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/PATorsionTrqCtrl/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/PTorsionTrqCtrl/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/PositionCtrlAll/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/VelocityCtrl1S/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/VelocityCtrl2L/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/VelocityCtrl3U/: ConstParams.cc  ControlFunctions.cc  InterfaceFunctions.hh
robot/ZFA01/VelocityCtrlAll/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/WorkForceCtrl/: ConstParams.cc  ControlFunctions.cc
robot/ZFA01/WorkPositionCtrl/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc  InterfaceFunctions.hh
robot/ZFA01/addon/: Makefile.depend  ZFA01.cc  ZFA01.hh
robot/ZFA01/equip/: EquipBase.hh  EquipParams.hh  EquipTemplate.cc  InterfaceFunctions.hh  ZFA01.hh
robot/ZFA01/m/: MultiPlot.m  SamplePlot.m
robot/general/BaseCtrl/: CMakeLists.txt  ConstParams.cc  ConstParams.hh  ControlFunctions.cc  CustomPlot.hh  GraphPlot.cc  Makefile  Makefile.depend  OfflineCalculations.cc  OfflineFunction.cc  UserPlot.hh
robot/general/equip/: ARCS_EQUIP.cmake  EquipParams.hh  EquipTemplate.hh  InterfaceFunctions.hh
robot/general/m/: SamplePlot.m
robot/sample/: ReadMe.txt
robot/sample/001_空の基本コード/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc  Makefile  Makefile.depend  UserPlot.hh
robot/sample/002_WebVR/: .gitignore  ConstParams.hh  ControlFunctions.cc  Makefile  Makefile.depend  Makefile.mr
robot/sample/011_リアルタイム性の測定/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc  Makefile.depend  OfflineFunction.cc
robot/sample/021_行列演算/: ConstParams.cc  ConstParams.hh  ControlFunctions.cc  GraphPlot.cc  Makefile  Makefile.depend  OfflineCalculations.cc  OfflineFunction.cc  result_before.txt  results_after.txt  save_test.mat  test.mat
robot/sample/021_行列演算_旧/: OfflineCalculations.cc
robot/sample/022_可変行列演算/: ControlFunctions.cc  Makefile.depend  OfflineFunction.cc
robot/sample/022_行列演算の消費時間/: ConstParams.hh  ControlFunctions.cc  Makefile.depend  (+2 more)
src/: ControlFunctions.hh  DataMemory.cc  DataMemory.hh  GraphPlot.cc  GraphPlot.hh  Makefile  Makefile.depend  ScreenParams.cc  ScreenParams.hh
sys/: ARCS.cc  ARCS6.cppcheck  ARCS_OPTIONS.cmake  ARCS_SYS.cmake  ARCSassert.cc  ARCSassert.hh  ARCScommon.cc  ARCScommon.hh  ARCSeventlog.cc  ARCSeventlog.hh  ARCSgraphics.cc  ARCSgraphics.hh  ARCSmemory.cc  ARCSmemory.hh  ARCSparams.cc  ARCSparams.hh  ARCSprint.cc  ARCSprint.hh  ARCSscreen.cc  ARCSscreen.hh  ARCSscrparams.cc  ARCSscrparams.hh  ARCSthread.cc  ARCSthread.hh  ConstParams.cc  ControlFunctions.hh  CustomPlot.cc  Doxyfile  GraphPlot.cc  GraphPlot.hh  InterfaceFunctions.cc  Makefile  Makefile.depend  UserPlot.cc  cppcheck.xml
webxr/: WebXR.cc  WebXR.hh  WebXRInterfaceFunctions.hh  WebXRMotorModel.hh  WebXRMotorParams.hh
(+71 files in other folders)
